Fix wrap of previous round desserts on mobile

--- a/src/frontend/boards/sgp.scoped.scss
+++ b/src/frontend/boards/sgp.scoped.scss
@@ -126,12 +126,6 @@ figure {
     flex-wrap: wrap;
     flex-direction: row;
   }
-
-  .playedCards {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-  }
 }
 
 .gameover {
